# modules_sepolicyinject

./: CMakeLists.txt  EFIDroid.ini  EFIDroidDependencies.ini  Makefile  sepolicy-inject.c
include/: sepolicy_inject.h
src/: main.c  private.h  sepolicy-inject-6.c  sepolicy-inject-7.c  sepolicy-inject-common.c  sepolicy-inject-public-interface.c  sepolicy-inject.c  tokenize.c  tokenize.h
